--- a/CPAngular2.Portal/package.json
+++ b/CPAngular2.Portal/package.json
@@ -19,6 +19,7 @@
     "@angular/router": "^3.4.10",
     "angular2-material-datepicker": "^0.5.0",
     "bootstrap": "^3.3.7",
+    "gulp-bootlint": "^0.8.1",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
     "ng2-bootstrap": "^1.4.2",
