--- a/CPAngular2.Portal/CPAngular2.Portal.csproj
+++ b/CPAngular2.Portal/CPAngular2.Portal.csproj
@@ -275,6 +275,7 @@
     <TypeScriptCompile Include="Application\Customer\languages.ts" />
     <TypeScriptCompile Include="Application\Customer\out-of-germany.ts" />
     <TypeScriptCompile Include="Application\Entities\address.entity.ts" />
+    <TypeScriptCompile Include="Application\Entities\availability.entity.ts" />
     <TypeScriptCompile Include="Application\Entities\customer.entity.ts" />
     <TypeScriptCompile Include="Application\Entities\geography.entity.ts" />
     <TypeScriptCompile Include="Application\Home\import-customers.component.ts" />
