removed hardcoded URL in web.config

--- a/CPAngular2.Portal/Web.config
+++ b/CPAngular2.Portal/Web.config
@@ -10,8 +10,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings>
     <add key="Title" value="Demo Application" />
-    <add key="ApiServer" value="http://localhost:8081/" />
-    <add key="DefaultPage" value="http://localhost:8081/index.cshtml" />
+    <add key="DefaultPage" value="index.cshtml" />
     <add key="vs:EnableBrowserLink" value="false" />
     <add key="IncludeBrowserSync" value="true" />
     <add key="CustomerImportData" value="C:\CPWebApplication\App_Data\customers.txt" />
