--- a/CPAngular2.Data.EntityFramework/CPAngular2.Data.EntityFramework.csproj
+++ b/CPAngular2.Data.EntityFramework/CPAngular2.Data.EntityFramework.csproj
@@ -38,6 +38,10 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.4.6\lib\net45\NLog.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -74,6 +78,10 @@
     <Compile Include="Migrations\201703161355174_moreFields.Designer.cs">
       <DependentUpon>201703161355174_moreFields.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704200857583_ChangePhotoField.cs" />
+    <Compile Include="Migrations\201704200857583_ChangePhotoField.Designer.cs">
+      <DependentUpon>201704200857583_ChangePhotoField.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -103,6 +111,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703161355174_moreFields.resx">
       <DependentUpon>201703161355174_moreFields.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704200857583_ChangePhotoField.resx">
+      <DependentUpon>201704200857583_ChangePhotoField.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
