--- a/CPAngular2.Data.EntityFramework/packages.config
+++ b/CPAngular2.Data.EntityFramework/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="NLog" version="4.4.6" targetFramework="net461" />
   <package id="System.Linq.Dynamic" version="1.0.6" targetFramework="net461" />
 </packages>
