--- a/CPAngular2.Portal/packages.config
+++ b/CPAngular2.Portal/packages.config
@@ -17,6 +17,9 @@
   <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net461" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net461" />
   <package id="Ninject.Web.WebApi" version="3.2.4.0" targetFramework="net461" />
+  <package id="NLog" version="4.4.6" targetFramework="net461" />
+  <package id="NLog.Config" version="4.4.6" targetFramework="net461" />
+  <package id="NLog.Schema" version="4.4.6" targetFramework="net461" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.206221351" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net461" />
 </packages>
