--- a/CPAngular2.Business.Entities/CPAngular2.Business.Entities.csproj
+++ b/CPAngular2.Business.Entities/CPAngular2.Business.Entities.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=6.0.2.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.6.0.2\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,14 +48,19 @@
     <Compile Include="Customer.cs" />
     <Compile Include="CustomerDienst.cs" />
     <Compile Include="Dienstype.cs" />
+    <Compile Include="DTO\CustomerDienstDTO.cs" />
     <Compile Include="DTO\CustomerDTO.cs" />
     <Compile Include="DTO\CustomerInformation.cs" />
     <Compile Include="DTO\_BaseDTO.cs" />
     <Compile Include="Geography.cs" />
     <Compile Include="DTO\TransactionalInformation.cs" />
+    <Compile Include="MapperHelper.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DTO\UserInformation.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
