--- a/CPAngular2.Portal/package.json
+++ b/CPAngular2.Portal/package.json
@@ -1,7 +1,7 @@
 {
   "name": "product-management",
   "version": "1.0.0",
-  "author": "Mark Caplin",
+  "author": "NSN",
   "description": "Package for the Acme Product Management sample application",
   "license": "ISC",
   "scripts": {
@@ -22,6 +22,7 @@
     "font-awesome": "^4.7.0",
     "gulp-bootlint": "^0.8.1",
     "jquery": "^3.2.1",
+    "linqts": "^1.8.2",
     "moment": "^2.18.1",
     "ng2-bootstrap": "^1.6.3",
     "ng2-dropdown": "0.0.4",
@@ -34,6 +35,10 @@
     "zone.js": "^0.7.8"
   },
   "devDependencies": {
+    "browser-sync": "^2.13.0",
+    "concurrently": "^2.0.0",
+    "core-js": "^2.4.0",
+    "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-cache": "^0.4.5",
     "gulp-concat": "^2.6.0",
@@ -47,11 +52,8 @@
     "gulp-typescript": "^3.1.0",
     "gulp-uglify": "^1.5.3",
     "gulp-wait": "^0.0.2",
-    "browser-sync": "^2.13.0",
-    "concurrently": "^2.0.0",
-    "core-js": "^2.4.0",
-    "del": "^2.2.0",
     "line-by-line": "^0.1.5",
+    "linqts": "^1.8.2",
     "lite-server": "^2.2.0",
     "moment": "^2.13.0",
     "path": "^0.12.7",
