--- a/CPAngular2.Portal/tsconfig.json
+++ b/CPAngular2.Portal/tsconfig.json
@@ -1,22 +1,23 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
-    "target": "es5",
-    //"lib": [ "dom", "es6" ],
-    "module": "commonjs",
+    "target": "es2017",
+    "lib": [ "dom", "es2017" ],
+    //"noLib": true,
+    "module": "system",
     "moduleResolution": "node",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
     "noImplicitAny": false,
+
+
     "typeRoots": [
-      //      "node_modules/@types",
       "./node_modules/@types"
     ]
     //,
     //"types": [
-    //  "core-js"
     //]
 
   },
@@ -26,8 +27,8 @@
     "../node_modules",
     "*node_modules*",
     "/node_modules*",
-    "typings/browser.d.ts",
-    "typings/browser",
+    //"typings/browser.d.ts",
+    //"typings/browser",
     "angular2",
     "rxjs",
     "typings"
